# HodlHut

./: .gitignore  .ic-assets.json5  CLAUDE.md  Cargo.toml  DEVELOPMENT_NOTES.md  Dashboard_broken_backup.tsx  README.md  REE_REGISTRATION_REQUEST.md  SMART_SOLUTIONS_TEST.md  accessibility-test.html  babylonlst-etch.yaml  babylonlst.txt  canister_ids.json  chat.md  dfx.json  font-hierarchy-test.html  jest.config.js  package-lock.json  package.json  recovery_diff.txt  tsconfig.json  webpack.config.js
.github/workflows/: build-artifacts.yml  deploy-staging.yml  lint-and-test.yml
backup_recovery_20250909/: HomePage_PRESERVED.tsx  tailwind_css_PRESERVED.css
docs/: ARCHITECTURE_DECISIONS.md  BABYLON_INTEGRATION_RESEARCH.md  PLATFORM_TREASURY_ARCHITECTURE.md  REE_ARCHITECTURE_CORRECTED.md  docs_specifications.md  hodlhut-developer-notes.md  infra_tech_stack.md  tech_stack.md
docs/archive/: README_old_hodlhut.md  deployment_guide_sept_2025.md  dex_routing_architecture.md  hodlhut-developer-notes.md  hodlhut_sessions_sept_2025.md  mygarden_architecture.md
docs/specs/: dex_routing.md  hutfactory.md  myhut.md  rpc_agents.md  tx_monitor.md
src/: jestSetup.js  setupTests.ts
src/agents/: BitcoinRPCAgent.js  DEXRoutingAgent.js  EVMRPCAgent.js  HutFactoryAgent.js  MasterAgent.js  SVMRPCAgent.js  TransactionMonitorAgent.js  test_all_agents.js  test_dex_agent.js
src/hodlhut_backend/: hodlhut_backend.did  index.js  main.mo  service.did.d.ts  service.did.js
src/hodlhut_frontend/: index.js
src/hodlprotocol_exchange/: Cargo.toml  hodlprotocol_exchange.did  index.js  service.did.d.ts  service.did.js
src/hodlprotocol_exchange/src/: bitcoin_canister.rs  lib.rs  rune_indexer.rs
src/hutfactory/: hutfactory.did  main.mo
src/myhut/: main.mo  myhut.did
src/ree_orchestrator/: ree_orchestrator.did
src/types/: assets.d.ts  dfinity.d.ts
(+106 files in other folders)
