[package]
name = "hodlprotocol_exchange"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# REE Types - Using proven working version from ree-lending-demo
ree-types = { git = "https://github.com/octopus-network/ree-types.git", rev = "3d0fb503384082bdeaf368305c4229801ee9ebd3" }

# Stable storage
ic-stable-structures = "0.6"

# Utilities
thiserror = "1.0"
ciborium = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
